--- a/MelroTech/cover.html
+++ b/MelroTech/cover.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>  section {
+    margin-bottom: 40px;
+    background: #9e5376;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+   }
+   header {
+            background: #003399;
+            color: #3c3ebb;
+            padding: 10px 0;
+            text-align: center;
+        }
+   </style>
 <body>
     <section id="cover">
-        <h2>Welcome to Mercy Robby's Samsung Phone Dealership!</h2>
+        <h2>Welcome to MelroTech Samsung Phone Dealership!
+        </h2>
         <p>Your one-stop shop for the latest and greatest Samsung smartphones. We pride ourselves on offering an exceptional selection of devices that cater to all your mobile needs, whether you're a tech enthusiast or just looking for a reliable phone.</p>
         <p>At Mercy Robby's, we believe in providing our customers with not only the best products but also unparalleled customer service. Our knowledgeable staff is here to assist you in finding the perfect phone to fit your lifestyle.</p>
         <p>Explore our diverse range of Samsung devices, enjoy competitive prices, and experience our commitment to quality and satisfaction. Thank you for choosing us as your Samsung phone provider!</p>
