--- a/MelroTech/products.html
+++ b/MelroTech/products.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>  section {
+    margin-bottom: 40px;
+    background: #9e5376;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}</style>
 <body>
     <section id="products">
         <h2>Available Samsung Phones</h2>
